--- a/hu-nvme-index.adoc
+++ b/hu-nvme-index.adoc
@@ -17,13 +17,18 @@ You can configure supported SAN hosts to use the NVMe over Fabrics (NVMe-oF) pro
 
 == ONTAP support and features
 
-The following table shows the ONTAP support and features and the SAN host versions for NVMe configurations:
+The table shows ONTAP features supported by ONTAP versions and SAN host operating systems:
 
 [cols="40,30,30",options="header"]
 |===
 
 |ONTAP Feature | Supported SAN Hosts | ONTAP Version
 
+|*Secure in-band authentication for NVMe/TCP* 
+a|* RHEL 10.0 
+* RHEL 9.6, 9.5 
+* Rocky Linux 10.0 
+* Rocky Linux 9.6, 9.5 |Support begins with 9.12.1
 |*NVMe/TCP in addition to NVMe/FC* 
 
 Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
@@ -32,50 +37,48 @@ a|* RHEL 10.0
 * RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.8, 8.2 
 * Rocky Linux 10.0
 * Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1  
-* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.8, 8.2 |
-|*NVMe and SCSI traffic supported on the same host*
-
-Configure dm-multipath for SCSI LUNs and use NVMe multipath for NVMe-oF namespaces.
-a|* RHEL 10.0 
-* RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
-* RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
-* Rocky Linux 10.0 
-* Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
-* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 |
-|*Secure in-band authentication for NVMe/TCP* 
-a|* RHEL 10.0 
-* RHEL 9.6, 9.5 
-* Rocky Linux 10.0 
-* Rocky Linux 9.6, 9.5 |Supported beginning with 9.12.1
-|*Native NVMe multipathing is always enabled* 
-
-DM multipath is not supported for NVMe-oF.
-a|* RHEL 10.0	
-* Rocky Linux 10.0 |
-|*In-kernel NVMe multipathing for NVMe namespaces* 
-
-Enabled by default; no explicit settings required.
-a|* RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
-* Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 | 
-|*SAN booting using NVMe/FC protocol* 
-a|* RHEL 10.0 
-* RHEL 9.6, 9.5, 9.4 
-* Rocky Linux 10.0 
-* Rocky Linux 9.6, 9.5, 9.4 |
+* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.8, 8.2 |Supported beginning with 9.10.1
 |*NVMe/TCP is a fully supported enterprise feature* 
 a|* RHEL 10.0 
 * RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
 * Rocky Linux 10.0 
-* Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 | 
-|*`nvme-cli` package includes auto-connect scripts*
+* Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 |Supported beginning with 9.10.1 
+|*NVMe and SCSI traffic supported on the same host*
 
-Third-party scripts are no longer needed.
+Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces.
 a|* RHEL 10.0 
 * RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
 * RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
 * Rocky Linux 10.0 
 * Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
-* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 |
+* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 |Supported beginning with 9.4 
+|===
+
+ONTAP supports the following SAN Host features regardless of ONTAP version:
+
+[cols="50,50",options="header"]
+|===
+
+|ONTAP Feature | Supported SAN Hosts 
+|*Native NVMe multipathing is always enabled* 
+
+ONTAP does not support Device Mapper (DM) multipath for NVMe-oF.
+a|* RHEL 10.0	
+* Rocky Linux 10.0  
+|*SAN booting using NVMe/FC protocol* 
+a|* RHEL 10.0 
+* RHEL 9.6, 9.5, 9.4 
+* Rocky Linux 10.0 
+* Rocky Linux 9.6, 9.5, 9.4 
+|*`nvme-cli` package includes auto-connect scripts*
+
+You do not need third-party scripts.
+a|* RHEL 10.0 
+* RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
+* RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
+* Rocky Linux 10.0 
+* Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
+* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
 |*Native udev rule in `nvme-cli` package*
 
 Provides round-robin load balancing for NVMe multipath.
@@ -84,12 +87,16 @@ a|* RHEL 10.0
 * RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
 * Rocky Linux 10.0 
 * Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
-* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 | 
+* Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
+|*In-kernel NVMe multipathing for NVMe namespaces* 
+
+ONTAP enables this feature by default; you do not need to change any settings.
+a|* RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0 
+* Rocky Linux 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0
 |===
 
-NOTE: For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 == What's next?
 
-* link:[Learn about Asymmetric Namespace Access (ANA)]. 
-
+* link:https://www.netapp.com/pdf.html?item=/media/10681-tr4684pdf.pdf[Learn about Asymmetric Namespace Access (ANA)].
