Edit post SMe review

--- a/hu-luhu-80.adoc
+++ b/hu-luhu-80.adoc
@@ -43,7 +43,7 @@ Refer to the vendor documentation to verify that the following packages are corr
 +
 [role="tabbed-block"]
 ====
-.Most Linux distributions
+.Linux hosts
 --
 Remove Linux Host Utilities from a RHEL, SUSE Linux Enterprise Server, or Oracle Linux host:
 
@@ -71,7 +71,7 @@ For earlier versions of Linux Host Utilities, go to the directory where the host
 +
 [role="tabbed-block"]
 =====
-.Most Linux distributions
+.Linux hosts
 --
 Install Linux Host Utilities 8.0 on a RHEL, SUSE Linux Enterprise Server, or Oracle Linux host:
 
