--- a/hu_wuhu_hba_settings.adoc
+++ b/hu_wuhu_hba_settings.adoc
@@ -16,7 +16,7 @@ summary: Windows Host Utilities includes an installation program that sets the r
 [.lead]
 The Windows Host Utilities require certain registry and parameter settings to verify that the Windows host correctly handles the storage system behavior.
 
-The Windows Host Utilities set parameter values that affect how the Windows host responds to a delay or loss of data. These values verify that the Windows host correctly handles events such as the failover of one controller in the storage system to its partner controller.
+The Windows Host Utilities sets parameter values that affect how the Windows host responds to a delay or loss of data. These values verify that the Windows host correctly handles events such as the failover of one controller in the storage system to its partner controller.
 
 Some values don't apply to the device-specific module (DSM) for SANtricity Storage Manager. Overlap between values set by the Windows Host Utilities and the DSM for SANtricity Storage Manager don't result in conflicts.
 
