--- a/hu-nvme-index.adoc
+++ b/hu-nvme-index.adoc
@@ -4,7 +4,7 @@ permalink: hu-nvme-index.html
 keywords: nvme, san, host, aix, linux, vsphere, windows
 summary: You can configure certain SAN hosts for the NVMe over Fabrics (NVMe-oF) protocol.
 ---
-= Overview
+= Learn about configuring ONTAP SAN hosts with NVMe-OF
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -22,7 +22,7 @@ The table shows ONTAP features supported by ONTAP versions and SAN host operatin
 [cols="40,30,30",options="header"]
 |===
 
-|ONTAP Feature | Supported SAN Hosts | ONTAP Version
+|ONTAP feature | Supported SAN hosts | ONTAP version
 
 |*Secure in-band authentication for NVMe/TCP* 
 a|* RHEL 10.0 
@@ -54,12 +54,12 @@ a|* RHEL 10.0
 * Rocky Linux 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 |Support begins with 9.4 
 |===
 
-ONTAP supports the following SAN Host features regardless of ONTAP version:
+ONTAP supports the following SAN Host features regardless of the ONTAP version running on your system setup:
 
 [cols="50,50",options="header"]
 |===
 
-|ONTAP Feature | Supported SAN Hosts 
+|ONTAP feature | Supported SAN hosts 
 |*Native NVMe multipathing is always enabled* 
 
 ONTAP does not support Device Mapper (DM) multipath for NVMe-oF.
@@ -97,6 +97,6 @@ a|* RHEL 9.6, 9.5, 9.4, 9.3, 9.2, 9.1, 9.0
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-== What's next?
+.Related information
 
-* link:https://www.netapp.com/pdf.html?item=/media/10681-tr4684pdf.pdf[Learn about NVMe-oF].
+* link:https://www.netapp.com/pdf.html?item=/media/10681-tr4684pdf.pdf[Learn about NVMe-oF^].
