--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 10.0 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10.0. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10.0. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. NVMe-oF with RHEL 10.0 has the following known limitations:
 
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
