--- a/nvme-rhel-810.adoc
+++ b/nvme-rhel-810.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.10 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.10. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 8.10:
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.10. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. NVMe-oF with RHEL 8.10 has the following known limitations:
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
 * In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.10; you must enable it manually.
