--- a/nvme-rockylinux-95.adoc
+++ b/nvme-rockylinux-95.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.5. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. There are no known limitations for Rocky Linux 9.5.
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.5. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. NVMe-oF with Rocky Linux 9.5 has no known limitations.
 
 == Step 1: Optionally, enable SAN booting
 
