ontapdoc-3096 PR feedback

--- a/_include/nvme/verify-nvme-services.adoc
+++ b/_include/nvme/verify-nvme-services.adoc
@@ -1,3 +1,7 @@
+The `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
+
+After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
+
 .Steps
 
 . Verify that `nvmf-autoconnect.service` is enabled:
