--- a/nvme-rockylinux-10.adoc
+++ b/nvme-rockylinux-10.adoc
@@ -163,7 +163,7 @@ Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 cat /sys/class/scsi_host/host*/fwrev 
 ----
 +
-The command returns firmware versions:
+The command returns the firmware versions:
 +
 ----
 14.0.539.16, sli-4:6:d
@@ -297,7 +297,7 @@ The expected output is 1.
 .TCP
 --
 
-The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
+The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP `connect` or `connect-all` operations manually.
 
 .Steps
 
@@ -458,10 +458,6 @@ include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[] 
 
 == Step 5: Verify NVMe boot services 
-
-With Rocky Linux 10.0, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
-
-After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
 
 include::_include/nvme/verify-nvme-services.adoc[]
 
