--- a/nvme-rhel-87.adoc
+++ b/nvme-rhel-87.adoc
@@ -179,7 +179,7 @@ Emulex LightPulse LPe35002-M2 2-Port 32Gb Fibre Channel Adapter
 cat /sys/class/scsi_host/host*/fwrev
 ----
 +
-The command returns firmware versions:
+The command returns the firmware versions:
 +
 ----
 14.0.505.12, sli-4:6:d
@@ -312,7 +312,7 @@ The expected output is 1.
 .TCP
 --
 
-The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
+The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP `connect` or `connect-all` operations manually.
 
 .Steps
 
