--- a/nvme-rhel-95.adoc
+++ b/nvme-rhel-95.adoc
@@ -160,7 +160,7 @@ Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 cat /sys/class/scsi_host/host*/fwrev
 ---- 
 +
-The following example shows firmware versions:
+The command returns the firmware versions:
 +
 ----
 14.4.317.10, sli-4:6:d
@@ -294,7 +294,7 @@ The expected ouptut is 1.
 .TCP
 --
 
-The NVMe/TCP protocol does not support the auto-connect operation. You must manually perform the NVMe/TCP connect or connect-all operations to discover the NVMe/TCP subsystems and namespaces.
+The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP `connect` or `connect-all` operations manually.
 
 .Steps
 
