--- a/_include/nvme/enable-san-booting.adoc
+++ b/_include/nvme/enable-san-booting.adoc
@@ -2,11 +2,11 @@ You can configure your host to use SAN booting to simplify deployment and improv
 
 .Steps
 
-. https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Create a SAN boot namespace and map it to the host^].
+. https://docs.netapp.com/us-en/ontap/san-admin/create-nvme-namespace-subsystem-task.html[Create a NVMe namespace and map it to the host^].
 
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot namespace is mapped.
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 
-. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+. Reboot the host and verify that the OS is up and running.
 
