--- a/hu-nvme-index.adoc
+++ b/hu-nvme-index.adoc
@@ -99,4 +99,4 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 .Related information
 
-* link:https://www.netapp.com/pdf.html?item=/media/10681-tr4684pdf.pdf[Learn about NVMe-oF^].
+* link:https://www.netapp.com/pdf.html?item=/media/10681-tr4684pdf.pdf[NetApp Knowledge Base: Learn about NVMe-oF^].
