--- a/nvme-rhel-92.adoc
+++ b/nvme-rhel-92.adoc
@@ -15,7 +15,9 @@ summary: How to Configure NVMe-oF Host for RHEL 9.2 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.2. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. NVMe-oF with RHEL 9.2 has the following known limitations:
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.2. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+
+*NVMe-oF with RHEL 9.2 has the following known limitations:*
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
 
