--- a/nvme-rockylinux-10.adoc
+++ b/nvme-rockylinux-10.adoc
@@ -15,7 +15,9 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 10.0 with ONTAP storage
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 10.0. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. NVMe-oF with Rocky Linux 10.0 has the following known limitations:
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 10.0. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+
+*NVMe-oF with Rocky Linux 10.0 has the following known limitations:*
 
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
