--- a/nvme-rockylinux-86.adoc
+++ b/nvme-rockylinux-86.adoc
@@ -15,7 +15,9 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 8.6 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 8.6. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. NVMe-oF with Rocky Linux 8.6 has the following known limitations:
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 8.6. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+
+*NVMe-oF with Rocky Linux 8.6 has the following known limitations:*
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
 * In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in Rocky Linux 8.6; you must enable it manually.
