--- a/nvme-rhel-81.adoc
+++ b/nvme-rhel-81.adoc
@@ -15,6 +15,7 @@ summary: Describes how to configure NVMe/FC for RHEL 8.1 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
+.Before you begin
 Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.1. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
 
 *NVMe-oF with RHEL 8.1 has the following known limitations:*
