--- a/nvme-rhel-85.adoc
+++ b/nvme-rhel-85.adoc
@@ -15,6 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.5 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
+.Before you begin
 Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.5. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
 
 *NVMe-oF with RHEL 8.5 has the following known limitations:*
