--- a/nvme-rhel-90.adoc
+++ b/nvme-rhel-90.adoc
@@ -14,6 +14,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
+.Before you begin
 Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.0. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
 
 *NVMe-oF with RHEL 9.0 has the following known limitations:*
