--- a/hu-nvme-rhel.adoc
+++ b/hu-nvme-rhel.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-nvme-index.html
+permalink: hu-nvme-rhel.html
 keywords: nvme, san, host, rhel, red hat, linux
 summary: You can configure RHEL SAN hosts for the NVMe over Fabrics (NVMe-oF) protocol.
 ---
