--- a/nvme-rhel-81.adoc
+++ b/nvme-rhel-81.adoc
@@ -16,7 +16,7 @@ summary: Describes how to configure NVMe/FC for RHEL 8.1 with ONTAP
 include::_include/nvme/nvme-introduction.adoc[]
 
 .Before you begin
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.1. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.1. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^].  
 
 *NVMe-oF with RHEL 8.1 has the following known limitations:*
 
