--- a/nvme-rhel-88.adoc
+++ b/nvme-rhel-88.adoc
@@ -16,7 +16,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.8 with ONTAP
 include::_include/nvme/nvme-introduction.adoc[]
 
 .Before you begin
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.8. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.8. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^]. 
 
 *NVMe-oF with RHEL 8.8 has the following known limitations:*
 
