--- a/nvme-rhel-95.adoc
+++ b/nvme-rhel-95.adoc
@@ -16,7 +16,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
 include::_include/nvme/nvme-introduction.adoc[]
 
 .Before you begin
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.5. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.5. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^]. 
 
 NVMe-oF with RHEL 9.5 has no known limitations.
 
