--- a/hu_rhel_10.adoc
+++ b/hu_rhel_10.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_rhel_10.html
+permalink: hu-rhel-10.html
 keywords: host utilities, red hat, rhel, linux, 10, netapp, ontap, rhel 
 summary: Install Linux Host Utilities on a RHEL 10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
