--- a/hu_rhel_810.adoc
+++ b/hu_rhel_810.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu_rhel_810.html
-keywords: host utilities, red hat, rhel, linux, 8.10, netapp, ontap, rhel 
-summary: Install Linux Host Utilities on a RHEL 8.10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+permalink: hu-rhel-8.html
+keywords: host utilities, red hat, rhel, linux, 8.x, netapp, ontap, rhel 
+summary: Install Linux Host Utilities on a RHEL 8.x host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 8.10 for FCP and iSCSI with ONTAP storage
+= Configure RHEL 8.x for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,7 +13,7 @@ summary: Install Linux Host Utilities on a RHEL 8.10 host to manage FCP and iSCS
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 8.10 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 8.x host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/linux-configure-kvm-note.adoc[]
 
@@ -24,7 +24,7 @@ include::_include/hu/install-linux-host-utilities-80.adoc[]
 
 == Step 3: Confirm the multipath configuration for your host
 
-You can use multipathing with RHEL 8.10 to manage ONTAP LUNs.
+You can use multipathing with RHEL 8.x to manage ONTAP LUNs.
 
 include::_include/hu/linux-rhel-multipathing.adoc[]
 
@@ -34,7 +34,33 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues.
+The RHEL 8.x with ONTAP storage release has the following known issues:
+
+[cols=4*,options="header"]
+|===
+| Affects version
+| NetApp Bug ID
+| Title
+| Description
+| 8.1
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1275843[1275843^] | Kernel disruption might occur on Red Hat Enterprise Linux 8.1 with QLogic QLE2672 16GB FC HBA during storage failover operation | Kernel disruption might occur during storage failover operations on the Red Hat Enterprise Linux  8.1 kernel with a QLogic QLE2672 Fibre Channel (FC) host bus adapter (HBA). The kernel disruption causes Red Hat Enterprise Linux 8.1 to reboot, leading to application disruption. If the kdump mechanism is enabled, the kernel disruption generates a vmcore file located in the/var/crash/ directory. You can check the vmcore file to determine the cause of the disruption.A storage failover with the QLogic QLE2672 HBA event affects the "kmem_cache_alloc+131" module. You can locate the event in the vmcore file by finding the following string: " [exception RIP: kmem_cache_alloc+131]"After the kernel disruption, reboot the Host OS and recover the operating system. Then restart the applications 
+| 8.1
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1275838[1275838^] | Kernel disruption occurs on Red Hat Enterprise Linux 8.1 with QLogic QLE2742 32GB FC HBA during storage failover operations | Kernel disruption occurs during storage failover operations on the Red Hat Enterprise Linux 8.1 kernel with a QLogic QLE2742 Fibre Channel (FC) host bus adapter (HBA). The kernel disruption causes Red Hat Enterprise Linux 8.1 to reboot, leading to application disruption. If the kdump mechanism is enabled, the kernel disruption generates a vmcore file located in the/var/crash/ directory. You can check the vmcore file to determine the cause of the disruption. A storage failover with the QLogic QLE2742 HBA event affects the "kmem_cache_alloc+131"module. You can locate the event in the vmcore file by finding the following string:    " [exception RIP: kmem_cache_alloc+131]"After the kernel disruption, reboot the Host OS and recover the operating system. Then restart the applications. 
+| 8.1
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1266250[1266250^] | Login to multiple paths fails during the Red Hat Enterprise Linux 8.1 installation on iSCSI SAN LUN | You cannot login to multiple paths during the Red Hat Enterprise Linux 8.1 installation on iSCSI SAN LUN multipath devices. Installation is not possible on multipath iSCSI device and the multipath service is not enabled on the SAN boot device.
+| 8.0
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1238719[1238719^] | Kernel disruption on RHEL8 with QLogic QLE2672 16GB FC during storage failover operations | Kernel disruption might occur during storage failover operations on a Red Hat Enterprise Linux (RHEL) 8 kernel with a QLogic QLE2672 host bus adapter (HBA). The kernel disruption causes the operating system to reboot. The reboot causes application disruption and generates the vmcore file under the /var/crash/directory if kdump is configured.  Use the vmcore file to identify the cause of the failure. In this case, the disruption is in the “kmem_cache_alloc+160” module. It is logged in the vmcore file with the following string:    "[exception RIP: kmem_cache_alloc+160]". Reboot the host OS to recover the operating system and then restart the application.
+| 8.0
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1226783[1226783^] | RHEL8 OS boots up to "emergency mode" when more than 204 SCSI devices are mapped on all Fibre Channel (FC) host bus adapters (HBA) | If a host is mapped with more than 204 SCSI devices during an operating systemreboot process, the RHEL8 OS fails to boot up to "normal mode" and enters "emergency mode". This results in most of the host services becoming unavailable. 
+| 8.0
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1230882[1230882^] | Creating a partition on an iSCSI multipath device during the RHEL8 installation is not feasible. | iSCSI SAN LUN multipath devices are not listed in disk selection during RHEL 8 installation. Consequently, the multipath service is not enabled on the SAN boot device. 
+| 8.0
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1235998[1235998^] | The "rescan-scsi-bus.sh -a" command does not scan more than 328 devices | If a Red Hat Enterprise Linux 8 host maps with more than 328 SCSI devices, the host OS command "rescan-scsi-bus.sh -a" only scans 328 devices. The host does not discover any remaining mapped devices.
+| 8.0
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1231087[1231087^] | Remote ports transit to a blocked state on RHEL8 with Emulex LPe16002 16GB FC during storage failover operations | Remote ports transit to a blocked state on RHEL8 with Emulex LPe16002 16GB Fibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer 
+| 8.0
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1231098[1231098^] |Remote ports transit to blocked state on RHEL8 with Emulex LPe32002 32GB FC during storage failover operations | Remote ports transit to a blocked state on RHEL8 with Emulex LPe32002 32GBFibre Channel (FC) during storage failover operations. When the storage node returns to an optimal state, the LIFs also come up and the remote port state should read "online".  Occasionally, the remote port state might continue to read as "blocked” or "not present". This state can lead to a "failed faulty" path to LUNs at the multipath layer. 
+|===
 
 == What's next?
 
