correct metadata for windows 2025

--- a/nvme-windows-2025.adoc
+++ b/nvme-windows-2025.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: hu-windows-2025.html
-keywords: windows, enterprise
-summary: You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 for operation with ONTAP storage.
+permalink: nvme-windows-2025.html
+keywords: nvme, windows, enterprise
+summary: NVMe/FC Host Configuration for Windows Server 2025 with ONTAP.
 ---
 = Configure Windows Server 2025 with NVMe/FC for ONTAP
 :hardbreaks:
