--- a/hu-windows-2025.adoc
+++ b/hu-windows-2025.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: nvme-windows-2025.html
-keywords: nvme, windows, enterprise
-summary: NVMe/FC Host Configuration for Windows Server 2025 with ONTAP
+permalink: hu-windows-2025.html
+keywords: windows, enterprise
+summary: You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 for operation with ONTAP storage.
 ---
 = Configure Windows Server 2025 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
