fix broken links

--- a/hu-rockylinux-8x.adoc
+++ b/hu-rockylinux-8x.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rockylinux-810.html
+permalink: hu-rockylinux-8x.html
 keywords: host utilities, rocky, linux, 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2, 8.1, 8.0, netapp, ontap, fcp, iscsi
 summary: Install Linux Host Utilities on a Rocky Linux 8.10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
