--- a/nvme-ol-9x.adoc
+++ b/nvme-ol-9x.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme-ol-95.html
+permalink: nvme-ol-9x.html
 keywords: nvme, oracle linux, 9x, host configuration
 summary: NVMe-oF Host Configuration for Oracle Linux 9x with ONTAP
 ---
