ontapdoc-3362 project yml

--- a/nvme-ol-7x.adoc
+++ b/nvme-ol-7x.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
-permalink: nvme_ol_79.html
-keywords: nvme, linux, oracle, 7.9
+permalink: nvme-ol-7x.html
+keywords: nvme, linux, oracle, 7x
 summary: Setting up VMe/FC Host Configuration for Oracle Linux 7.9 with ONTAP, with examples
 ---
 = NVMe/FC Host Configuration for Oracle Linux 7.9 with ONTAP
