--- a/nvme-ol-8x.adoc
+++ b/nvme-ol-8x.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
-permalink: nvme-ol-810.html
-keywords: nvme, oracle linux, 8.10, host configuration
+permalink: nvme-ol-8x.html
+keywords: nvme, oracle linux, 8x, host configuration
 summary: NVMe-oF Host Configuration for Oracle Linux 8.10 with ONTAP
 ---
 = NVMe-oF Host Configuration for Oracle Linux 8.10 with ONTAP
